@@ -9,6 +9,8 @@ CHANGES IN CUPS V1.4.4
 
 	- Documentation updates (STR #3453, STR #3527, STR #3528, STR #3529)
 	- Security: The fix for CVE-2009-3553 was incomplete (STR #3490)
+	- Security: The texttops filter did not check the results of allocations
+	  (STR #3516)
 	- Fixed some IPP conformance issues with the scheduler's
 	  ippget-event-life, operations-supported, output-bin, and sides
 	  attributes (STR #3554)
